# statics

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
examples/chapter2/: 1_vector.cpp  2_scale_of_a_vector.cpp  3_sum_of_vectors.cpp  4_law_of_cosine_and_sine.cpp  5_rectangular_components.cpp  6_cartesian_vectors.cpp  7_position_vectors.cpp  8_dot_product.cpp
examples/linear_algebra_chapter1/: 1_gaussian_elimination.cpp  1_matrix_gaussian_elimination.cpp
examples/statics_chapter2/: 1_vector.cpp  3_sum_of_vectors.cpp  4_law_of_cosine_and_sine.cpp
examples/statics_chapter3/: 1_algebraic_algebraic_particle_equilibrium_in_2d_2_uknowns.cpp
images/chapter2/: vectors.wmf
niu/include/: cgal_box_util.h  cgal_inscribe_util.cpp  cgal_inscribe_util.h  cgal_intersection_util.h  cgal_math_util.cpp  cgal_mesh_boolean.cpp  cgal_polyline_mesh_util.h  cgal_polyline_util.cpp  cgal_rectangle_util.cpp  cgal_xform_util.cpp  clipper_util.h  database_writer.cpp  database_writer.h  rtree.h  rtree_util.cpp  rtree_util.h  wood_cut.h  wood_element.h  wood_globals.cpp  wood_joint.h  wood_joint_lib.cpp  wood_joint_lib.h  wood_main.h  wood_test.cpp  wood_test.h  wood_xml.h
src/: arc.cpp  arc.hpp  core.hpp  data.cpp  data.hpp  gaussian_elimination.hpp  globals.cpp  globals.hpp  intersection.cpp  intersection.hpp  limit_analysis.cpp  limit_analysis.hpp  line.cpp  line.hpp  load_line.cpp  load_line.hpp  load_point.cpp  load_point.hpp  logger.cpp  logger.hpp  matrix.cpp  matrix.hpp  moment_shear_and_bending.cpp  moment_shear_and_bending.hpp  moments.cpp  moments.hpp  offset_2d.cpp  offset_2d.hpp  plane.cpp  plane.hpp  pline.cpp  pline.hpp  point.cpp  point.hpp  point_and_vector.cpp  point_and_vector.hpp  vector.cpp  vector.hpp  xform.cpp  xform.hpp
src/include/: cgal_box_search.h  cgal_box_util.cpp  cgal_intersection_util.cpp  cgal_math_util.h  cgal_mesh_boolean.h  cgal_plane_util.cpp  cgal_plane_util.h  cgal_polyline_mesh_util.cpp  cgal_polyline_util.h  cgal_rectangle_util.h  cgal_vector_util.cpp  cgal_vector_util.h  cgal_xform_util.h  clipper_util.cpp  wood_element.cpp  wood_globals.h  wood_joint.cpp  wood_main.cpp  wood_xml.cpp
src/niu/: polygon.cpp
tests/: test_arc.hpp  test_gaussian_elimination.hpp  test_intersection.hpp  test_limit_analysis.hpp  test_matrix.hpp  test_matrix_gaussian_elimination.hpp  test_methods.hpp  test_moment_shear_and_bending.hpp  test_pline.hpp  test_point_and_vector.hpp  test_vector.hpp  test_xform.hpp
